--- a/cluster/addons/cluster-monitoring/google/heapster-controller.yaml
+++ b/cluster/addons/cluster-monitoring/google/heapster-controller.yaml
@@ -20,6 +20,40 @@ metadata:
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
 ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: heapster-config
+  namespace: kube-system
+  labels:
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+data:
+  NannyConfiguration: |-
+    apiVersion: nannyconfig/v1alpha1
+    kind: NannyConfiguration
+    baseCPU: {{ base_metrics_cpu }}
+    cpuPerNode: {{ metrics_cpu_per_node }}m
+    baseMemory: {{ base_metrics_memory }}
+    memoryPerNode: {{ metrics_memory_per_node }}Mi
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: eventer-config
+  namespace: kube-system
+  labels:
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+data:
+  NannyConfiguration: |-
+    apiVersion: nannyconfig/v1alpha1
+    kind: NannyConfiguration
+    baseCPU: 100m
+    cpuPerNode: 0m
+    baseMemory: {{ base_eventer_memory }}
+    memoryPerNode: {{ eventer_memory_per_node }}Ki
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -64,7 +98,7 @@ spec:
             - /eventer
             - --source=kubernetes:''
             - --sink=gcl
-        - image: gcr.io/google_containers/addon-resizer:1.7
+        - image: gcr.io/google_containers/addon-resizer:1.8.0
           name: heapster-nanny
           resources:
             limits:
@@ -73,6 +107,9 @@ spec:
             requests:
               cpu: 50m
               memory: {{ nanny_memory }}
+          volumeMounts:
+          - name: heapster-config-volume
+            mountMath: /etc/config
           env:
             - name: MY_POD_NAME
               valueFrom:
@@ -84,16 +121,13 @@ spec:
                   fieldPath: metadata.namespace
           command:
             - /pod_nanny
-            - --cpu={{ base_metrics_cpu }}
-            - --extra-cpu={{ metrics_cpu_per_node }}m
-            - --memory={{ base_metrics_memory }}
-            - --extra-memory={{metrics_memory_per_node}}Mi
+            - --config-dir=/etc/config
             - --threshold=5
             - --deployment=heapster-v1.5.0-beta.2
             - --container=heapster
             - --poll-period=300000
             - --estimator=exponential
-        - image: gcr.io/google_containers/addon-resizer:1.7
+        - image: gcr.io/google_containers/addon-resizer:1.8.0
           name: eventer-nanny
           resources:
             limits:
@@ -111,17 +145,25 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+          volumeMounts:
+          - name: eventer-config-volume
+            mountMath: /etc/config
           command:
             - /pod_nanny
-            - --cpu=100m
-            - --extra-cpu=0m
-            - --memory={{base_eventer_memory}}
-            - --extra-memory={{eventer_memory_per_node}}Ki
+            - --config-dir=/etc/config
             - --threshold=5
             - --deployment=heapster-v1.5.0-beta.2
             - --container=eventer
             - --poll-period=300000
             - --estimator=exponential
+      volumes:
+        - name: heapster-config-volume
+          configMap:
+            name: heapster-config
+      volumes:
+        - name: eventer-config-volume
+          configMap:
+            name: eventer-config
       serviceAccountName: heapster
       tolerations:
         - key: "CriticalAddonsOnly"
