--- a/cluster/addons/cluster-monitoring/stackdriver/heapster-controller.yaml
+++ b/cluster/addons/cluster-monitoring/stackdriver/heapster-controller.yaml
@@ -18,6 +18,23 @@ metadata:
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
 ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: heapster-config
+  namespace: kube-system
+  labels:
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
+data:
+  NannyConfiguration: |-
+    apiVersion: nannyconfig/v1alpha1
+    kind: NannyConfiguration
+    baseCPU: {{ base_metrics_cpu }}
+    cpuPerNode: {{ metrics_cpu_per_node }}m
+    baseMemory: {{ base_metrics_memory }}
+    memoryPerNode: {{ metrics_memory_per_node}}Mi
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -76,7 +93,7 @@ spec:
                 fieldRef:
                   fieldPath: metadata.namespace
         # END_PROMETHEUS_TO_SD
-        - image: gcr.io/google_containers/addon-resizer:1.7
+        - image: gcr.io/google_containers/addon-resizer:1.8.0
           name: heapster-nanny
           resources:
             limits:
@@ -85,6 +102,9 @@ spec:
             requests:
               cpu: 50m
               memory: {{ nanny_memory }}
+          volumeMounts:
+          - name: heapster-config-volume
+            mountPath: /etc/config
           env:
             - name: MY_POD_NAME
               valueFrom:
@@ -96,15 +116,16 @@ spec:
                   fieldPath: metadata.namespace
           command:
             - /pod_nanny
-            - --cpu={{ base_metrics_cpu }}
-            - --extra-cpu={{ metrics_cpu_per_node }}m
-            - --memory={{ base_metrics_memory }}
-            - --extra-memory={{metrics_memory_per_node}}Mi
+            - --config-dir=/etc/config
             - --threshold=5
             - --deployment=heapster-v1.5.0-beta.2
             - --container=heapster
             - --poll-period=300000
             - --estimator=exponential
+      volumes:
+        - name: heapster-config-volume
+          configMap:
+            name: heapster-config
       serviceAccountName: heapster
       tolerations:
         - key: "CriticalAddonsOnly"
