--- a/staging/src/k8s.io/apimachinery/pkg/api/validate/BUILD
+++ b/staging/src/k8s.io/apimachinery/pkg/api/validate/BUILD
@@ -13,6 +13,7 @@ go_library(
     ],
     importpath = "k8s.io/apimachinery/pkg/api/validate",
     deps = [
+        "//vendor/k8s.io/apimachinery/pkg/api/equality:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/validation:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/util/validation/field:go_default_library",
