add test file for pkg/kubelet/cm/deviceplugin/pod_devices.go
	modified:   pkg/kubelet/cm/deviceplugin/BUILD
	new file:   pkg/kubelet/cm/deviceplugin/pod_devices_test.go

--- a/pkg/kubelet/cm/deviceplugin/BUILD
+++ b/pkg/kubelet/cm/deviceplugin/BUILD
@@ -52,11 +52,13 @@ go_test(
     srcs = [
         "endpoint_test.go",
         "manager_test.go",
+        "pod_devices_test.go",
     ],
     importpath = "k8s.io/kubernetes/pkg/kubelet/cm/deviceplugin",
     library = ":go_default_library",
     deps = [
         "//pkg/kubelet/apis/deviceplugin/v1alpha:go_default_library",
+        "//pkg/kubelet/container:go_default_library",
         "//pkg/kubelet/lifecycle:go_default_library",
         "//plugin/pkg/scheduler/schedulercache:go_default_library",
         "//vendor/github.com/stretchr/testify/assert:go_default_library",
